--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="section-aqua100 wf-section">
         <div class="container-vertical w-container">
             <h3 id="w-node-_69528e0b-2ce7-a9cd-b902-8ae4159a164c-7df255aa" class="overline overh1">How it works</h3>
-            <h2 class="heading-2 onlight">Make business decisions with the environment in mind</h2>
+            <h2 class="heading-2 onlight">Accoount your carbon emmissions with the power of AI 🧠</h2>
         </div>
     </div>
     <div class="section-aqua100 wf-section">
@@ -184,14 +184,14 @@
                     <h3 id="w-node-b44fa89c-a96f-6e93-3439-782202b301a1-7df255aa"
                         class="heading-1 numbers">02</h3>
                     <div id="w-node-b44fa89c-a96f-6e93-3439-782202b301a3-7df255aa" class="heading-6 emph onlight">Manage</div>
-                    <div id="w-node-b44fa89c-a96f-6e93-3439-782202b301a5-7df255aa" class="heading-6 onlight">Build a plan that reduces emissions across your business.</div><a id="w-node-_852c674b-6377-67b4-16b2-f2501d58bfb8-7df255aa" href="/manage" class="learn-more w-button">Learn more</a></div>
+                    <div id="w-node-b44fa89c-a96f-6e93-3439-782202b301a5-7df255aa" class="heading-6 onlight">Get personlized tips to meet yor targets</div><a id="w-node-_852c674b-6377-67b4-16b2-f2501d58bfb8-7df255aa" href="/manage" class="learn-more w-button">Learn more</a></div>
                 <div data-w-id="d0b9f5c0-66e6-7870-6dd8-2f29ba5a6705"
                     class="valueprop-card report">
                     <div id="w-node-_290fe0ac-2421-73fa-b599-8ade135ed6c8-7df255aa" class="imageholder report"><img src="https://assets.website-files.com/6266b5e20215f61058171191/627ad60db3986a9b8b1d2817_Sustain.Life-home-ui-r-03.svg" loading="lazy" alt="Sample Sustain.Life impact dashboard showing emissions, spend, and offsets" class="image-36"
                         /></div>
                     <h3 id="w-node-d0b9f5c0-66e6-7870-6dd8-2f29ba5a6706-7df255aa" class="heading-1 numbers">03</h3>
                     <div id="w-node-d0b9f5c0-66e6-7870-6dd8-2f29ba5a6708-7df255aa" class="heading-6 emph onlight">Report</div>
-                    <div id="w-node-d0b9f5c0-66e6-7870-6dd8-2f29ba5a670a-7df255aa" class="heading-6 onlight">Communicate progress and align with third-party standards.</div><a id="w-node-_72f4c43b-928c-9a09-e2c1-4f858ddfa81b-7df255aa" href="/report" class="learn-more report w-button">Learn more</a></div>
+                    <div id="w-node-d0b9f5c0-66e6-7870-6dd8-2f29ba5a670a-7df255aa" class="heading-6 onlight">Share your report and ask for expert advice</div><a id="w-node-_72f4c43b-928c-9a09-e2c1-4f858ddfa81b-7df255aa" href="/report" class="learn-more report w-button">Learn more</a></div>
             </div>
             <div class="value-prop-image">
                 <div class="content-holder">
@@ -204,7 +204,7 @@
     </div>
     <div class="section-aqua700 wf-section">
         <div class="container-18 w-container">
-            <h3 class="overline ondark overh2">Why Sustain.Life?</h3>
+            <h3 class="overline ondark overh2">Why Greenovate?</h3>
             <div class="div-block">
                 <div id="w-node-_7dc1a9fa-039a-4a2e-1894-93c8a1a26fbe-7df255aa" class="featured-quote-ib"></div>
                 <div id="w-node-_6f601b02-6145-4a7d-d5dc-25e489ff7d79-7df255aa" class="featured-quote-dame"></div>
@@ -215,9 +215,9 @@
                 <div id="w-node-_1211087b-ed8f-3a23-d1e9-79117b3eb955-7df255aa" data-current="Interactive Brokers" data-easing="ease-in-out-quint" data-duration-in="250" data-duration-out="250" class="tabs w-tabs">
                     <div class="tabs-content home-quote w-tab-content">
                         <div data-w-tab="Interactive Brokers" class="tab-pane-interactive-brokers w-tab-pane w--tab-active">
-                            <p class="body ondark">We’re delighted to work with Sustain.Life to offer emissions measurement capabilities to our investors so they can actualize their commitment to taking meaningful climate action.</p>
-                            <p class="body emph ondark">Edward Soffer, ESG Manager</p><img loading="lazy" height="32" alt="Interactive Brokers logo" src="https://assets.website-files.com/6266b5e20215f61058171191/62793df31bebd9a3eb1e63a9_logo-interactivebrokers.svg" /></div>
-                        <div
+                            <p class="body ondark">Our personlized enviromental reports helps companies meet their targets easily and help them become friendly for enviroment</p>
+                            <p class="body emph ondark">Greenovate</p><img loading="lazy" height="32" alt="Interactive Brokers logo" src="https://assets.website-files.com/6266b5e20215f61058171191/62793df31bebd9a3eb1e63a9_logo-interactivebrokers.svg" /></div>
+                        <!-- <div
                             data-w-tab="Dame" class="tab-pane-dame w-tab-pane">
                             <p class="body ondark">There are ample opportunities across the sexual wellness value chain to improve environmental sustainability, and Sustain.Life helps us better identify, understand and mitigate our environmental impact.</p>
                             <p class="body emph ondark">Alexandra Fine, CEO</p><img loading="lazy" height="24" alt="Dame logo" src="https://assets.website-files.com/6266b5e20215f61058171191/62793c49c5ead20c2d6634d5_logo-dame.svg" /></div>
@@ -230,8 +230,8 @@
                         <p class="body ondark">I found the Policy Builder extremely useful at our stage because having a template of a well-conceived policy helps in the standardization of new practices and ensure that written guidelines are best-in-class. <a href="https://www.sustain.life/blog/sustainability-miyokos-creamery-interview"
                                 class="read-more">Read more</a></p>
                         <p class="body emph ondark">Jennifer Kaplan, Sustainability Manager</p><img width="104" height="" alt="Miyoko’s Creamery logo" src="https://assets.website-files.com/6266b5e20215f61058171191/62793f9e16dcc12d5016d54d_logo-miyokos.png" loading="lazy" /></div>
-                </div>
-                <div class="tabs-menu left w-tab-menu">
+                </div> -->
+                <!-- <div class="tabs-menu left w-tab-menu">
                     <a data-w-tab="Interactive Brokers" class="tab-link w-inline-block w-tab-link w--current">
                         <div data-w-id="1211087b-ed8f-3a23-d1e9-79117b3eb965" class="tab-text">01</div>
                     </a>
@@ -244,7 +244,7 @@
                     <a data-w-tab="Miyokos" class="tab-link w-inline-block w-tab-link">
                         <div data-w-id="610a36ee-ae90-69aa-27d0-9ee89d6a3df0" class="tab-text">04</div>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -259,7 +259,7 @@
     <div class="footer wf-section">
         <div class="footer-container w-container">
             <div class="footer-signoff">
-                <div><img src="https://assets.website-files.com/6266b5e20215f61058171191/6376b70383994a1a568dde22_sl-logo-secondary.svg" loading="lazy" width="127" height="56" alt="" />
+                <div><img src="logo.png" loading="lazy" width="127"  alt="" />
                     <div class="body tagline">Your path to net-zero</div>
                 </div>
                 <div class="div-block-41">
