--- a/Dashboard/production/login.html
+++ b/Dashboard/production/login.html
@@ -47,7 +47,7 @@
 
               <div class="separator">
                 <p class="change_link">New to site?
-                  <a href="#signup" class="to_register"> Create Account </a>
+                  <a href="/demo.html" class="to_register"> Create Account </a>
                 </p>
 
                 <div class="clearfix"></div>
@@ -55,7 +55,7 @@
 
                 <div>
                   <h1><i class="fa fa-paw"></i> Greenovate</h1>
-                 
+
                 </div>
               </div>
             </form>
@@ -91,7 +91,7 @@
 
                 <div>
                   <h1><i class="fa fa-paw"></i> Greenovate</h1>
-                  
+
                 </div>
               </div>
             </form>
@@ -106,7 +106,7 @@
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.16.0/firebase-analytics.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
-  
+
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
@@ -118,7 +118,7 @@
       appId: "1:12037851299:web:bcc182d8d1e5dfc32b9716",
       measurementId: "G-4RPYDBXSVF"
     };
-  
+
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
@@ -129,7 +129,7 @@
 
         signInWithEmailAndPassword(auth, email, password)
         .then((userCredential) => {
-          // Signed in 
+          // Signed in
           const user = userCredential.user;
           console.log(user);
           alert(user.email+" Login successfully!!!");
@@ -141,7 +141,7 @@
           const errorMessage = error.message;
           console.log(errorMessage);
           alert(errorMessage);
-        });		  		  
+        });
     });
 
 
