--- a/demo.html
+++ b/demo.html
@@ -195,7 +195,7 @@
       <div class="col-sm-4">
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" name="email" id="email" class="form-control" placeholder="Company's official email id" style="width:20rem;">
+            <input type="text" name="email" id="email" class="form-control" placeholder="Company's official email id" style="width:20rem; color:black;">
           </div>
           
           <div class="form-group">
